# adrbrowsiel-core

./: .gitignore  .sonarcloud.properties  BUILD.gn  DEPS  Jenkinsfile  README.md  adrbrowsiel_paks.gni  brave_repack_locales.gni  jest.config.js  package-lock.json  package.json  tsconfig-lint.json  tsconfig-webpack.json  tsconfig.json  version.version
android/: BUILD.gn  adrbrowsiel_java_resources.gni  adrbrowsiel_java_sources.gni  brave_java_resources.gni
android/java/: AndroidManifest.xml  apk_for_test.flags  proguard.flags
android/javatests/: AndroidManifest.xml
app/: BUILD.gn  DEPS  adrbrowsiel_command_ids.h  adrbrowsiel_command_line_helper.h  adrbrowsiel_main_delegate.cc  adrbrowsiel_main_delegate.h  adrbrowsiel_strings_override.grd  bookmarks_strings.grdp  brave_command_line_helper.cc  brave_command_line_helper_unittest.cc  brave_exe.rc  brave_exe.ver  brave_generated_resources.grd  brave_main_delegate_browsertest.cc  brave_main_delegate_runtime_flags_browsertest.cc  brave_strings.grd  extensions_strings.grdp  extensions_strings_override.grdp  file_manager_strings.grdp  generated_resources.grd  generated_resources_override.grd  media_router_strings.grdp  nearby_share_strings.grdp  nux_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  printing_strings.grdp  profiles_strings.grdp  settings_adrbrowsiel_strings.grdp  settings_adrbrowsiel_strings_override.grdp  settings_strings.grdp  settings_strings_override.grdp  shared_settings_strings.grdp  shared_settings_strings_override.grdp  supervised_user_error_page_strings.grdp  vr_strings.grdp  web_time_limit_error_page_strings.grdp  welcome_strings.grdp
app/android/: BUILD.gn
app/linux/: BUILD.gn
app/mac/: BUILD.gn
app/resources/: adrbrowsiel_generated_resources_de.xtb  adrbrowsiel_generated_resources_es.xtb  adrbrowsiel_generated_resources_et.xtb  adrbrowsiel_generated_resources_fa.xtb  adrbrowsiel_generated_resources_fi.xtb  adrbrowsiel_generated_resources_fr.xtb  adrbrowsiel_generated_resources_gu.xtb  adrbrowsiel_generated_resources_hi.xtb  adrbrowsiel_generated_resources_id.xtb  adrbrowsiel_generated_resources_iw.xtb  adrbrowsiel_generated_resources_ko.xtb  adrbrowsiel_generated_resources_ml.xtb  adrbrowsiel_generated_resources_no.xtb  adrbrowsiel_generated_resources_pt-PT.xtb  adrbrowsiel_generated_resources_sv.xtb  adrbrowsiel_generated_resources_ta.xtb  adrbrowsiel_generated_resources_te.xtb  adrbrowsiel_generated_resources_uk.xtb  adrbrowsiel_generated_resources_zh-CN.xtb  brave_generated_resources_am.xtb  brave_generated_resources_ar.xtb  brave_generated_resources_bg.xtb  brave_generated_resources_bn.xtb  brave_generated_resources_ca.xtb  brave_generated_resources_cs.xtb  brave_generated_resources_da.xtb  brave_generated_resources_el.xtb  brave_generated_resources_en-GB.xtb  brave_generated_resources_es-419.xtb  brave_generated_resources_fil.xtb  brave_generated_resources_fr-CA.xtb  brave_generated_resources_hr.xtb  brave_generated_resources_hu.xtb  brave_generated_resources_it.xtb  brave_generated_resources_ja.xtb  brave_generated_resources_kn.xtb  brave_generated_resources_lt.xtb  brave_generated_resources_lv.xtb  brave_generated_resources_mr.xtb  brave_generated_resources_ms.xtb  (+173 more)
app/theme/: BUILD.gn  adrbrowsiel_unscaled_resources.grd  brave_theme_resources.grd
app/vector_icons/: BUILD.gn  vector_icons.cc.template  vector_icons.h.template  wallet_toolbar_button.icon
app/win/: BUILD.gn
browser/: BUILD.gn  DEPS  adrbrowsiel_browser_main_extra_parts.h  adrbrowsiel_browser_main_loop.cc  adrbrowsiel_browser_main_loop.h  adrbrowsiel_browser_main_parts_mac.h  adrbrowsiel_content_browser_client_browsertest.cc  adrbrowsiel_content_browser_client_unittest.cc  adrbrowsiel_drm_tab_helper.cc  adrbrowsiel_drm_tab_helper.h  adrbrowsiel_local_state_prefs.h  adrbrowsiel_profile_prefs.cc  adrbrowsiel_profile_prefs.h  adrbrowsiel_resources_util_unittest.cc  brave_browser_main_extra_parts.cc  brave_browser_main_parts.cc  brave_browser_main_parts.h  brave_browser_main_parts_mac.mm  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client.h  brave_local_state_prefs.cc  brave_prefs_browsertest.cc  brave_profile_prefs.cc  brave_resources_browsertest.cc  brave_scheme_load_browsertest.cc  brave_tab_helpers.cc  brave_tab_helpers.h  browser_context_keyed_service_factories.cc  browser_context_keyed_service_factories.h  sources.gni  update_util.cc  update_util.h
browser/adrbrowsiel_ads/: BUILD.gn  ads_service_factory.cc  ads_tab_helper.cc
browser/adrbrowsiel_rewards/: extension_rewards_service_observer.cc  extension_rewards_service_observer.h  rewards_tab_helper.h  tip_dialog.cc  tip_dialog.h
browser/adrbrowsiel_shields/: ad_block_pref_service_factory.h  ad_block_service_browsertest.cc  ad_block_service_browsertest.h  adrbrowsiel_shields_web_contents_observer.cc  adrbrowsiel_shields_web_contents_observer.h  (+1 more)
common/: BUILD.gn  DEPS  adrbrowsiel_channel_info.cc  adrbrowsiel_content_client_unittest.cc  adrbrowsiel_features.cc  adrbrowsiel_paths.cc  adrbrowsiel_switches.cc  brave_channel_info.h  brave_channel_info_browsertest.cc  brave_channel_info_posix.cc  brave_channel_info_posix.h  brave_channel_info_unittest.cc  brave_constants.cc  brave_constants.h  brave_content_client.cc  brave_content_client.h  brave_features.h  brave_paths.h  brave_renderer_configuration.mojom  brave_switches.h  network_constants.cc  network_constants.h  pref_names.cc  pref_names.h  resource_bundle_helper.cc  resource_bundle_helper.h  translate_network_constants.cc  translate_network_constants.h  url_constants.cc  url_constants.h  webui_url_constants.cc  webui_url_constants.h
net/: sources.gni
renderer/: BUILD.gn  DEPS  adrbrowsiel_content_renderer_client.h  brave_content_renderer_client.cc  brave_render_thread_observer.cc  brave_render_thread_observer.h  sources.gni
test/: BUILD.gn  DEPS  testing.gni
utility/: BUILD.gn  DEPS  adrbrowsiel_content_utility_client.cc  adrbrowsiel_content_utility_client.h  sources.gni
(+4558 files in other folders)
