# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.


adrbrowsiel_locale_source_patterns = [
  "${root_gen_dir}/components/adrbrowsiel_components_strings_",
  "${root_gen_dir}/adrbrowsiel/adrbrowsiel_generated_resources_",
]

adrbrowsiel_locale_deps = [
  "//adrbrowsiel/app:adrbrowsiel_generated_resources_grit",
  "//adrbrowsiel/components/resources:strings",
]
