import("//adrbrowsiel/components/adrbrowsiel_sync/buildflags/buildflags.gni")
import("//adrbrowsiel/components/p3a/buildflags.gni")
import("//build/config/android/rules.gni")

declare_args() {
  adrbrowsiel_android_developer_options_code = ""
}

java_cpp_enum("adrbrowsiel_android_java_enums_srcjar") {
  sources = [
    "//adrbrowsiel/chromium_src/chrome/browser/notifications/notification_handler.h",
    "//adrbrowsiel/components/decentralized_dns/constants.h",
  ]
}

java_cpp_template("adrbrowsiel_config_java") {
  sources = [ "//adrbrowsiel/build/android/java/templates/adrbrowsielConfig.template" ]
  defines = [
    "adrbrowsiel_ANDROID_DEVELOPER_OPTIONS_CODE=\"$adrbrowsiel_android_developer_options_code\"",
    "adrbrowsiel_ANDROID_SYNC_ENABLED=$enable_adrbrowsiel_sync",
    "adrbrowsiel_ANDROID_P3A_ENABLED=$adrbrowsiel_p3a_enabled",
  ]
}
